fixed scrollbar element at top

--- a/src/index.css
+++ b/src/index.css
@@ -13,7 +13,8 @@ body {
     hsla(0, 0%, 0%, 1), 10%,
     hsla(251, 85%, 27%, 0.9),
     hsla(251, 49%, 42%, 0.8)
-  )
+  );
+  overflow-x: hidden;
 }
 
 h1 {
@@ -40,15 +41,18 @@ code {
 
 
 .card-container {
+  width: 100vw;
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
+  overflow: hidden;
 
 }
 
 .search-box-container {
   display: flex;
   justify-content: center;
+  overflow: hidden;
 }
 
 .search-box {
@@ -63,4 +67,11 @@ code {
 
 .search-box:hover, .search-box:active {
   opacity: 1;
+}
+
+.scrollable-container {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  overflow-x: hidden;
 }
